[gd_scene load_steps=2 format=3 uid="uid://bly28iu4klsvj"]

[ext_resource type="Script" path="res://squad_panel.gd" id="1_oogib"]

[node name="SquadPanel" type="Panel"]
layout_direction = 2
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_bottom = 700.0
grow_horizontal = 0
script = ExtResource("1_oogib")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 13.0
offset_right = 125.0
offset_bottom = 36.0
text = "SQUAD NAME"

[node name="Leader" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 45.0
offset_right = 125.0
offset_bottom = 68.0
text = "SQUAD LEADER"

[node name="RallyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 89.0
offset_right = 116.0
offset_bottom = 120.0
text = "Rally"

[node name="MapSelect" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 153.0
offset_right = 137.0
offset_bottom = 187.0

[node name="TransButton" type="Button" parent="."]
layout_mode = 0
offset_left = 149.0
offset_top = 154.0
offset_right = 223.0
offset_bottom = 185.0
text = "TRANSIT"

[connection signal="pressed" from="RallyButton" to="." method="_on_rally_button_pressed"]
[connection signal="pressed" from="TransButton" to="." method="_on_trans_button_pressed"]
